Use List.copyOf() instead of Collections.unmodifiableList()
We can safely use List.copyOf() because we check if (providers) is null.

If use List.copyOf()
- Clean code
- Performance optimization
- Guarantees a truly immutable list.