@@ -40,8 +40,7 @@ public class CompositeDataSourcePoolMetadataProvider implements DataSourcePoolMe
 	 * @param providers the data source pool metadata providers
 	 */
 	public CompositeDataSourcePoolMetadataProvider(Collection<? extends DataSourcePoolMetadataProvider> providers) {
-		this.providers = (providers != null) ? Collections.unmodifiableList(new ArrayList<>(providers))
-				: Collections.emptyList();
+		this.providers = (providers != null) ? List.copyOf(providers) : Collections.emptyList();
 	}
 
 	@Override
